--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
             <li>Ongoing spotlight in Signature D media</li>
           </ul>
           <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap">
-            <a class="btn" href="/private-club.html">Request Invitation</a>
+           <a class="btn" href="private-club.html">Request Invitation</a>
+
           </div>
         </div>
         <div class="package">
@@ -242,7 +243,8 @@
             <li>Concierge support for deals</li>
           </ul>
           <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap">
-            <a class="btn" href="/influencer-club.html">Apply</a>
+            <a class="btn" href="influencer-club.html">Apply</a>
+
           </div>
         </div>
       </div>
