--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
       <p class="fine">Audits spark packages. Packages unlock access. Access attracts anchors and influencers. Anchors create gravity. Together, the cycle makes your brand inevitable.</p>
       <div class="package" style="padding:0;overflow:hidden">
         <!-- Replace the image src below with your hosted graphic (e.g., /images/signature-cycle.png) -->
-       <img src="images/signature-cycle.png" alt="Signature D Cohesive Cycle" width="1200" height="600" loading="lazy">
+       <img src="signature-cycle.png" alt="Signature D Cohesive Cycle" width="1200" height="600" loading="lazy">
+azy">
  </div>
     </div>
   </section>
