--- a/index.html
+++ b/index.html
@@ -116,13 +116,19 @@
             </div>
           </div>
         </div>
-        <div class="package">
-          <h4>Start in 60 seconds</h4>
-          <p class="fine">Begin with a $1 audit in 24 hours, then a 10‑minute call to map your 30‑day plan.</p>
-          <div class="" style="display:flex;gap:12px;flex-wrap:wrap">
-            <a class="btn gold" href="https://cash.app/$YOURCASH/1" target="_blank" rel="noopener">$1 Mini Audit</a>
-            <a class="btn silver" href="https://calendly.com/your-link/10min" target="_blank" rel="noopener">Book 10‑min Call</a>
-          </div>
+        <div class="package" style="margin-top:28px;text-align:center">
+  <h4>⚡ Start in 60 Seconds</h4>
+  <p class="fine">Begin with a <strong>$1 brand audit</strong> in 24 hours, then a <strong>10-minute strategy call</strong> to map your next 30 days.</p>
+  
+  <div style="display:flex;gap:14px;justify-content:center;flex-wrap:wrap;margin-top:16px">
+    <!-- Replace href with your real links -->
+    <a class="btn gold" href="https://cash.app/$YOURCASH/1" target="_blank" rel="noopener"> $1 Brand Audit </a>
+    <a class="btn emerald" href="https://calendly.com/your-link/10min" target="_blank" rel="noopener"> Book 10-Min Call </a>
+  </div>
+
+  <p class="fine" style="margin-top:10px">Delivered fast. Confidential. No pressure.</p>
+</div>
+
         </div>
       </div>
     </div>
