--- a/index.html
+++ b/index.html
@@ -131,17 +131,18 @@
         </div>
 
         <!-- Compact Start block -->
-        <div class="package" style="margin:28px auto;text-align:center;max-width:520px">
-          <h4 style="margin-bottom:6px">⚡ Start in 60 Seconds</h4>
-          <p class="fine" style="margin:0 0 12px">
-            $1 audit in 24h → 10-min call to map your 30-day plan.
-          </p>
-          <div style="display:flex;gap:10px;justify-content:center;flex-wrap:wrap">
-            <a class="btn gold" href="https://cash.app/$YOURCASH/1" target="_blank" rel="noopener"> $1 Brand Audit </a>
-            <a class="btn emerald" href="https://calendly.com/your-link/10min" target="_blank" rel="noopener"> 10-Min Call </a>
-          </div>
-          <p class="fine" style="margin-top:8px;font-size:13px">Fast • Confidential • No pressure</p>
-        </div>
+        <div class="package" style="text-align:center;max-width:420px;margin:auto">
+  <h4 style="margin:0 0 6px;font-size:18px;letter-spacing:.5px">⚡ Start in 60 Seconds</h4>
+  <p class="fine" style="margin:0 0 12px">
+    <strong>$1 audit today</strong> → <strong>10-min plan tomorrow.</strong>
+  </p>
+  <div style="display:flex;gap:10px;justify-content:center;flex-wrap:wrap">
+    <a class="btn gold" href="https://cash.app/$YOURCASH/1" target="_blank" rel="noopener">Start for $1</a>
+    <a class="btn silver" href="https://calendly.com/your-link/10min" target="_blank" rel="noopener">Quick Call</a>
+  </div>
+  <p class="fine" style="margin-top:10px;font-size:13px;opacity:.8">Fast • Confidential • No pressure</p>
+</div>
+
       </div>
     </div>
   </section>
