--- a/index.html
+++ b/index.html
@@ -131,16 +131,31 @@
         </div>
 
         <!-- Compact Start block -->
-        <div class="package" style="text-align:center;max-width:420px;margin:auto">
-  <h4 style="margin:0 0 6px;font-size:18px;letter-spacing:.5px">⚡ Start in 60 Seconds</h4>
-  <p class="fine" style="margin:0 0 12px">
-    <strong>$1 audit today</strong> → <strong>10-min plan tomorrow.</strong>
-  </p>
-  <div style="display:flex;gap:10px;justify-content:center;flex-wrap:wrap">
-    <a class="btn gold" href="https://cash.app/$YOURCASH/1" target="_blank" rel="noopener">Start for $1</a>
-    <a class="btn silver" href="https://calendly.com/your-link/10min" target="_blank" rel="noopener">Quick Call</a>
+        <div class="startBanner" style="
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:12px;
+  padding:14px 18px;
+  border-radius:14px;
+  background:linear-gradient(135deg,rgba(255,217,120,.08),rgba(255,255,255,.04));
+  border:1px solid rgba(230,234,239,.08);
+  margin-top:20px;
+  flex-wrap:wrap;
+">
+  <div style="font-size:15px;font-weight:600;letter-spacing:.3px">
+    ⚡ Start in 60 Seconds
   </div>
-  <p class="fine" style="margin-top:10px;font-size:13px;opacity:.8">Fast • Confidential • No pressure</p>
+  <div style="flex:1;font-size:14px;opacity:.85">
+    $1 audit today → 10-min plan tomorrow.
+  </div>
+  <div style="display:flex;gap:8px;flex-wrap:wrap">
+    <a class="btn gold" style="padding:8px 14px;font-size:14px" href="https://cash.app/$YOURCASH/1" target="_blank" rel="noopener">Start for $1</a>
+    <a class="btn silver" style="padding:8px 14px;font-size:14px" href="https://calendly.com/your-link/10min" target="_blank" rel="noopener">Quick Call</a>
+  </div>
+  <div style="flex-basis:100%;font-size:12px;opacity:.65;margin-top:4px;text-align:center">
+    Fast • Confidential • No pressure
+  </div>
 </div>
 
       </div>
