--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Signature D — We don’t chase attention — we own it.</title>
+
+  <!-- Meta / SEO -->
+  <meta name="description" content="Signature D fuses strategy, cinematic design, and precise execution to build brands that feel inevitable." />
+  <link rel="canonical" href="https://<your-username>.github.io/<your-repo>/" />
+  <meta name="theme-color" content="#0e3f3f" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Signature D — We don’t chase attention — we own it." />
+  <meta property="og:description" content="Strategy. Cinematic design. Precise execution. Outcomes that feel inevitable." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="og-cover.jpg" />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
   <style>
     :root{
       --emerald:#0e3f3f; --emeraldDeep:#092c2c;
@@ -28,6 +44,7 @@
     .btn.gold{background:linear-gradient(135deg,var(--gold),var(--goldBright));color:#181a1e;border-color:rgba(0,0,0,.15)}
     .btn.silver{background:linear-gradient(135deg,#cfd7df,#aeb9c6);color:#0a0d10;border-color:rgba(0,0,0,.18)}
     .btn.emerald{background:linear-gradient(135deg,var(--emerald),var(--emeraldDeep));color:#fff;border-color:rgba(255,255,255,.08)}
+    .btn:focus{outline:2px solid var(--goldBright);outline-offset:2px}
 
     /* HERO */
     .hero{position:relative;overflow:hidden}
@@ -42,7 +59,7 @@
     .hero h2{font-family:"Playfair Display",serif;font-size:46px;margin:0 0 10px}
     .hero p{max-width:820px;margin:0 0 18px;opacity:.92}
 
-    /* Confidence Card */
+    /* Confidence Card + Grid */
     .cardWrap{display:grid;gap:18px;grid-template-columns:1fr;}
     @media(min-width:980px){.cardWrap{grid-template-columns:1.4fr .6fr}}
     .confidenceCard{min-height:240px;border-radius:20px;position:relative;overflow:hidden;border:1px solid rgba(230,234,239,.12);background:linear-gradient(135deg, rgba(207,215,223,.12), rgba(230,234,239,.03));box-shadow:0 16px 46px rgba(0,0,0,.45)}
@@ -52,6 +69,25 @@
     .confidenceQuote{font-family:"Playfair Display",serif;font-size:28px;line-height:1.25}
     .confidenceMeta{display:flex;justify-content:space-between;align-items:center;gap:8px}
     .chip{display:inline-flex;gap:8px;align-items:center;padding:6px 10px;border-radius:999px;border:1px solid rgba(230,234,239,.14);background:rgba(255,217,120,.12);color:var(--gold)}
+
+    /* Ultra-slim hero ribbon (blends into hero) */
+    .start-ribbon{
+      display:flex; align-items:center; gap:10px; flex-wrap:wrap;
+      padding:6px 8px; border-radius:10px; background:transparent; position:relative; margin-top:10px;
+    }
+    .start-ribbon::before{
+      content:""; position:absolute; left:0; right:0; top:-6px; height:1px;
+      background:linear-gradient(90deg, rgba(255,217,120,.25), rgba(255,255,255,.06), rgba(255,217,120,.18));
+      border-radius:2px;
+    }
+    .start-ribbon .spark{
+      width:6px; height:6px; border-radius:50%; background:var(--goldBright);
+      box-shadow:0 0 14px rgba(255,217,120,.55), 0 0 2px rgba(255,217,120,.9);
+      flex:0 0 auto;
+    }
+    .start-ribbon .label{ font-size:13px; letter-spacing:.3px; font-weight:600; opacity:.95; }
+    .start-ribbon .line{ flex:1; min-width:140px; font-size:13px; opacity:.82; }
+    .start-ribbon .btn{ padding:6px 12px; font-size:13px; border-radius:999px; border:1px solid rgba(230,234,239,.14); }
 
     /* Sections */
     .section{padding:56px 24px;border-top:1px solid rgba(230,234,239,.08)}
@@ -85,8 +121,6 @@
     footer{padding:40px 24px;border-top:1px solid rgba(230,234,239,.08)}
     .fine{opacity:.78}
 
-    /* small a11y polish */
-    .btn:focus{outline:2px solid var(--goldBright);outline-offset:2px}
     @media (prefers-reduced-motion: reduce){.starfield{animation:none}.btn:hover{transform:none;box-shadow:none}}
   </style>
 </head>
@@ -94,7 +128,7 @@
   <!-- HEADER -->
   <header>
     <div class="container" style="display:flex;justify-content:space-between;align-items:center">
-      <div class="brand">
+      <div class="brand" aria-label="Signature D brand">
         <div class="logo" aria-hidden="true"></div>
         <h1>Signature D.</h1>
       </div>
@@ -130,34 +164,14 @@
           </div>
         </div>
 
-        <!-- Compact Start block -->
-        <div class="startBanner" style="
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  gap:12px;
-  padding:14px 18px;
-  border-radius:14px;
-  background:linear-gradient(135deg,rgba(255,217,120,.08),rgba(255,255,255,.04));
-  border:1px solid rgba(230,234,239,.08);
-  margin-top:20px;
-  flex-wrap:wrap;
-">
-  <div style="font-size:15px;font-weight:600;letter-spacing:.3px">
-    ⚡ Start in 60 Seconds
-  </div>
-  <div style="flex:1;font-size:14px;opacity:.85">
-    $1 audit today → 10-min plan tomorrow.
-  </div>
-  <div style="display:flex;gap:8px;flex-wrap:wrap">
-    <a class="btn gold" style="padding:8px 14px;font-size:14px" href="https://cash.app/$YOURCASH/1" target="_blank" rel="noopener">Start for $1</a>
-    <a class="btn silver" style="padding:8px 14px;font-size:14px" href="https://calendly.com/your-link/10min" target="_blank" rel="noopener">Quick Call</a>
-  </div>
-  <div style="flex-basis:100%;font-size:12px;opacity:.65;margin-top:4px;text-align:center">
-    Fast • Confidential • No pressure
-  </div>
-</div>
-
+        <!-- Ultra-slim Start ribbon -->
+        <div class="start-ribbon" aria-label="Fast start banner">
+          <span class="spark" aria-hidden="true"></span>
+          <span class="label">⚡ Start in 60 seconds</span>
+          <span class="line">$1 audit today → 10-min plan tomorrow.</span>
+          <a class="btn gold" href="https://cash.app/$YOURCASH/1" target="_blank" rel="noopener">Start for $1</a>
+          <a class="btn silver" href="https://calendly.com/your-link/10min" target="_blank" rel="noopener">Quick Call</a>
+        </div>
       </div>
     </div>
   </section>
@@ -263,7 +277,7 @@
             <li>Ongoing spotlight in Signature D media</li>
           </ul>
           <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap">
-            <a class="btn" href="private-club.html">Request Invitation</a>
+            <a class="btn emerald" href="private-club.html">Request Invitation</a>
           </div>
         </div>
         <div class="package">
@@ -314,7 +328,7 @@
     <div class="container">
       <h3>Start in 60 seconds</h3>
       <div class="ctaRow">
-        <!-- Left: $1 audit (kept gold) -->
+        <!-- Left: $1 audit -->
         <div class="package">
           <h4>$1 Mini Audit</h4>
           <p class="fine">One page. Three fixes. Delivered in 24 hours.</p>
@@ -322,13 +336,12 @@
           <p class="fine" style="margin-top:8px">After payment, email your brand + link to <a href="mailto:narinedevirn@gmail.com">narinedevirn@gmail.com</a>.</p>
         </div>
 
-        <!-- Right: Join the list (white, corporate) -->
+        <!-- Right: Join the list -->
         <div class="package card--light">
           <h4 style="color:#0a0d10;margin-bottom:6px">📩 Join the List</h4>
           <p class="sub" style="margin:0 0 12px">
             Be first to know when new cohort seats open.
           </p>
-          <!-- Simple in-page email capture: mailto -->
           <form action="mailto:narinedevirn@gmail.com" method="post" enctype="text/plain" style="display:flex;gap:10px;flex-wrap:wrap;align-items:center">
             <input type="email" name="email" placeholder="Your email"
                    required
