--- a/index.html
+++ b/index.html
@@ -1,1 +1,153 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="utf-8" /> <meta name="viewport" content="width=device-width, initial-scale=1" /> <title>Signature D — Private Club After Dark</title> <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet"> <style> /* Light, corporate apply card */ .card--light{ background:#ffffff; color:#0a0d10; border:1px solid rgba(10,13,16,.08); box-shadow:0 14px 40px rgba(0,0,0,.16); } .card--light .sub{ color:#44505e; } .card--light ul{ margin-left:20px; } .btn.emerald{ background:linear-gradient(135deg,#0e3f3f,#0b2e2e); color:#fff; border:1px solid rgba(255,255,255,.08); } .btn.emerald:hover{ filter:brightness(1.05); transform:translateY(-1px); } .link-muted{ color:#768395; text-decoration:underline; } .link-muted:hover{ color:#4b5663; } :root{--emerald:#0e3f3f;--gold:#f5c046;--goldBright:#ffd978;--ink:#0a0d10;--silver:#e6eaef;--white:#fff;--charcoal:#14171a} *{box-sizing:border-box} html,body{margin:0;padding:0;background:var(--ink);color:var(--silver);font-family:Inter,system-ui,sans-serif} a{color:inherit;text-decoration:none} .container{max-width:880px;margin:0 auto;padding:40px 24px} /* minimal header to keep integrity */ header{position:sticky;top:0;z-index:5;background:rgba(10,13,16,.7);backdrop-filter:saturate(180%) blur(10px);border-bottom:1px solid rgba(230,234,239,.12)} .headerInner{max-width:880px;margin:0 auto;display:flex;justify-content:space-between;align-items:center;padding:10px 24px} .smallLink{padding:8px 12px;border-radius:12px;border:1px solid rgba(230,234,239,.14)} h1,h2,h3{font-family:"Playfair Display",serif;margin:0 0 16px} h1{font-size:40px;color:var(--gold)} h2{font-size:28px;color:var(--silver)} .card{border:1px solid rgba(230,234,239,.14);border-radius:20px;padding:28px;margin:20px 0;background:linear-gradient(145deg,var(--charcoal),rgba(10,13,16,.95));box-shadow:0 18px 40px rgba(0,0,0,.45)} .price{font-size:22px;font-weight:700;color:var(--goldBright)} ul{margin:12px 0 0 20px} li{margin:8px 0} footer{padding:24px;text-align:center;font-size:14px;color:var(--silver);opacity:.75;border-top:1px solid rgba(230,234,239,.12)} .btn{display:inline-block;padding:12px 18px;margin-top:16px;border-radius:14px;background:linear-gradient(135deg,var(--gold),var(--goldBright));color:#181a1e;font-weight:600} .lock{font-size:14px;opacity:.75;margin-top:8px} /* Chatroom */ .chatroom{margin-top:40px;border-radius:20px;border:1px solid rgba(230,234,239,.12);background:linear-gradient(145deg,rgba(14,63,63,.35),rgba(10,13,16,.9));padding:20px;box-shadow:0 18px 40px rgba(0,0,0,.4)} .chatroom h2{font-size:24px;color:var(--gold);margin-bottom:12px} .messages{height:300px;overflow-y:auto;padding:12px;border-radius:14px;background:rgba(255,255,255,.03);margin-bottom:12px} .msg{margin:6px 0;padding:8px 12px;border-radius:12px;background:rgba(255,255,255,.05)} .msg.me{background:linear-gradient(135deg,var(--gold),var(--goldBright));color:#181a1e;text-align:right} .chat-input{display:flex;gap:8px} .chat-input input{flex:1;padding:12px 14px;border-radius:12px;border:1px solid rgba(230,234,239,.18);background:rgba(255,255,255,.08);color:var(--silver)} .chat-input button{padding:12px 16px;border-radius:12px;background:var(--emerald);color:var(--white);border:none;font-weight:600;cursor:pointer} .chat-input button:hover{background:#0b2e2e} </style> </head> <body> <!-- minimal header only for navigation --> <header> <div class="headerInner"> <div>Signature D — Private Client Club</div> <nav> <a class="smallLink" href="index.html">← Back to Home</a> </nav> </div> </header> <div class="container"> <h1>✨ Signature D Private Client Club — After Dark</h1> <p class="lock">Invitation-only access • A classy space to network, share, and connect</p> <div class="card"> <h2>Membership Tiers</h2> <h3>Silver Access</h3> <div class="price">$3,500/month</div> <ul> <li>Priority WhatsApp/Signal support</li> <li>2 cinematic reels + 5–7 posts / month</li> <li>Monthly 90-min strategy call + performance report</li> <li>Annual VIP shoot (half-day)</li> <li>Signature D Roundtable invite</li> </ul> <a href="#apply" class="btn">Apply for Silver</a> <h3>Gold Access</h3> <div class="price">$7,500/month</div> <ul> <li>All Silver benefits — doubled</li> <li>Mid-month check-in call</li> <li>Ad campaign management (excl. ad spend)</li> </ul> <a href="#apply" class="btn">Apply for Gold</a> <h3>Platinum Access</h3> <div class="price">$12,500+/month</div> <ul> <li>Dedicated Signature D team</li> <li>6–8 reels + 15–20 posts / month</li> <li>Weekly operational support</li> <li>Quarterly on-site day</li> <li>Empire growth roadmap</li> </ul> <a href="#apply" class="btn">Apply for Platinum</a> </div> <!-- Sophisticated, networking-first Apply block --> <div id="apply" class="card card--light" style="margin-top:28px"> <h2 style="margin-top:0">Apply to the Private Client Club</h2> <p class="sub" style="margin-top:6px"> Signature D Private Client Club is a curated executive network focused on access, originality, and results. Admissions are selective to protect quality and ensure meaningful, high-value connections. </p> <ul> <li><strong>Curated introductions</strong> to partners, brands, and investors aligned with your goals.</li> <li><strong>Priority lane</strong> for creative, strategy, and deal support — discreet and immediate.</li> <li><strong>Partner access</strong> across the Signature D ecosystem (Orlando anchors, hospitality, retail, media).</li> <li><strong>Quarterly roundtable</strong> for private insights, benchmarks, and co-marketing opportunities.</li> </ul> <!-- Primary CTA: your form or scheduling link --> <div style="display:flex;gap:12px;flex-wrap:wrap;margin-top:16px"> <!-- Replace the href with your real Google Form or Typeform link --> <a class="btn emerald" href="" target="_blank" rel="noopener noreferrer" aria-label="Start your application to the Private Client Club"> Start Application </a> <!-- Optional direct email fallback --> <a class="btn" href="mailto:narinedevirn@gmail.com?subject=Private%20Client%20Club%20Application" aria-label="Email Signature D to apply to the Private Client Club"> Email Us Instead </a> </div> <div style="margin-top:14px"> <a class="link-muted" href="index.html">← Back to Home</a> </div> </div> <div class="chatroom"> <h2>🕯️ After Dark Lounge</h2> <div class="messages" id="messages"> <div class="msg">Welcome to the lounge — share freely, stay classy ✨</div> </div> <div class="chat-input"> <input type="text" id="chatInput" placeholder="Type your message..." /> <button onclick="sendMsg()">Send</button> </div> </div> </div> <footer> © <span id="yr"></span> DeVirn Signature House, Inc. • Private Access </footer> <script> document.getElementById('yr').textContent=new Date().getFullYear(); function sendMsg(){ const input=document.getElementById('chatInput'); const val=input.value.trim(); if(!val) return; const msg=document.createElement('div'); msg.className='msg me'; msg.textContent=val; document.getElementById('messages').appendChild(msg); input.value=''; document.getElementById('messages').scrollTop=document.getElementById('messages').scrollHeight; } </script> </body> </html> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Signature D — We don’t chase attention — we own it.</title>
+  <meta name="description" content="Signature D fuses strategy, cinematic design, and precise execution to build inevitable brands." />
+  <link rel="canonical" href="https://<your-username>.github.io/signatured-site/" />
+  <link rel="icon" href="favicon.ico" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <meta property="og:title" content="Signature D — We don’t chase attention — we own it." />
+  <meta property="og:description" content="Strategy. Cinematic design. Precise execution. Outcomes that feel inevitable." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://<your-domain>/images/og-cover.jpg" />
+  <meta name="theme-color" content="#0e3f3f" />
+
+  <style>
+    /* keep your original CSS here */
+  </style>
+</head>
+<body>
+  <a class="visually-hidden skip" href="#main">Skip to content</a>
+
+  <!-- HEADER -->
+  <header>
+    <div class="container" style="display:flex;justify-content:space-between;align-items:center">
+      <div class="brand" aria-label="Signature D brand">
+        <div class="logo" aria-hidden="true"></div>
+        <h1>Signature D.</h1>
+      </div>
+      <nav aria-label="Primary">
+        <a href="#method">Method</a>
+        <a href="#packages">Packages</a>
+        <a href="#clubs">Clubs</a>
+        <a href="private-club.html">Client Club</a>
+        <a href="influencer-club.html">Influencer Club</a>
+        <!-- <a href="after-dark.html">After-Dark</a> -->
+        <a href="#partners">Partners</a>
+        <a href="#contact">Start</a>
+      </nav>
+    </div>
+  </header>
+
+  <main id="main">
+    <!-- HERO -->
+    <!-- (keep your hero + confidence card block here) -->
+
+    <!-- METHOD -->
+    <!-- (keep your flywheel block here, add picture tag for lazy-load) -->
+
+    <!-- PACKAGES -->
+    <!-- (keep your package cards, update Visibility card to show “access optional” if you like) -->
+
+    <!-- CLUBS -->
+    <section id="clubs" class="section">
+      <div class="container">
+        <h3>Private Clubs</h3>
+        <div class="grid cols-3" style="margin-top:12px">
+          <div class="package">
+            <h4>Private Client Club</h4>
+            <div class="price">$240/month • invite-only</div>
+            <ul>
+              <li>Immediate response (priority channel)</li>
+              <li>Insider originality insights (monthly)</li>
+              <li>Guaranteed opportunities & curated intros</li>
+              <li>Ongoing spotlight in Signature D media</li>
+            </ul>
+            <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap">
+              <a class="btn" href="private-club.html">Request Invitation</a>
+            </div>
+          </div>
+          <div class="package">
+            <h4>Influencer Access Club</h4>
+            <div class="price">$500–$2,000/month • approval required</div>
+            <ul>
+              <li>2–5 guaranteed brand connections/month</li>
+              <li>Paid campaign placements & cross-promotions</li>
+              <li>Spotlight in decks & reels to brands</li>
+              <li>Concierge support for deals</li>
+            </ul>
+            <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap">
+              <a class="btn" href="influencer-club.html">Apply</a>
+            </div>
+          </div>
+          <!-- Optional After-Dark card -->
+          <div class="package">
+            <h4>After-Dark Lounge</h4>
+            <div class="price">Members-only chat</div>
+            <ul>
+              <li>Classy late-night networking</li>
+              <li>Access by passphrase</li>
+            </ul>
+            <div style="margin-top:12px;display:flex;gap:10px;flex-wrap:wrap">
+              <a class="btn" href="after-dark.html">Enter Lounge</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- PARTNERS -->
+    <!-- (keep your partners block here) -->
+
+    <!-- CONTACT / EMAIL LIST -->
+    <!-- (keep your audit + newsletter blocks here) -->
+  </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="container" style="display:flex;justify-content:space-between;flex-wrap:wrap;gap:10px;align-items:center">
+      <div>© <span id="yr"></span> DeVirn Signature House, Inc.</div>
+      <div class="fine" style="display:flex;gap:14px;flex-wrap:wrap">
+        <a href="private-club.html">Client Club</a>
+        <a href="influencer-club.html">Influencer Club</a>
+        <!-- <a href="after-dark.html">After-Dark</a> -->
+        <span>We don’t chase attention — we own it.</span>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    (function(){
+      const quotes=[
+        "We don’t chase attention — we own it.",
+        "Not forced. Not fabricated. Inevitable.",
+        "Luxury isn’t loud. It’s undeniable.",
+        "Precision over noise. Presence over hype.",
+        "Make it timeless. Make it inevitable."
+      ];
+      const card=document.getElementById('confidenceCard');
+      const quoteEl=document.getElementById('quote');
+      const shuffleBtn=document.getElementById('shuffleBtn');
+      if(shuffleBtn && quoteEl){
+        const shuffle=()=>{ const next=quotes[Math.floor(Math.random()*quotes.length)];
+          quoteEl.style.opacity=0;
+          setTimeout(()=>{ quoteEl.textContent=next; quoteEl.style.opacity=1; },160);
+        };
+        shuffleBtn.addEventListener('click',shuffle);
+      }
+      if(card){
+        card.addEventListener('mousemove',(e)=>{
+          const r=card.getBoundingClientRect();
+          card.style.setProperty('--mx', ((e.clientX-r.left)/r.width*100)+'%');
+          card.style.setProperty('--my', ((e.clientY-r.top)/r.height*100)+'%');
+        }, {passive:true});
+      }
+      const yr=document.getElementById('yr'); if(yr){ yr.textContent=new Date().getFullYear(); }
+    })();
+  </script>
+</body>
+</html>
